# simple-2.5D-graphic-engine

./: CMakeLists.txt  README.md  bsp.cpp  bsp.h  color_funcs.cpp  color_funcs.h  draw_objects.cpp  draw_objects.h  framebuffer.cpp  framebuffer.h  gamehandler.cpp  gamehandler.h  gameobjects.cpp  gameobjects.h  geom_funcs.cpp  geom_funcs.h  line.cpp  line.h  main.cpp  point.cpp  point.h  screen_bsp.cpp  screen_bsp.h  texture.cpp  texture.h
